testsuite/escript/classes/fail-scopes-var-undefined-01.err
fail-scopes-var-undefined-01.src:7:9: error: Unknown identifier 'Animal::variable'.