testsuite/escript/classes/fail-scopes-var-undefined-01.src
// Accessing a non-existant scoped variable inside its own scope fails.

class Animal
    var variable_exists;
    function StaticFunc()
        Animal::variable_exists;
        Animal::variable;
    endfunction
endclass

Animal::StaticFunc();
